syntax = "proto3";

package leader;

option go_package = "./proto;proto";

service LeaderService {
  rpc RequestCS (Request) returns (Response);
  rpc ReplyCS (Request) returns (Response);
}

// The request message containing the user's name.
message Request {
  int32 node_id = 1;
  int64 timestamp = 2;
}

// The response message containing the greetings.
message Response {
  bool success = 1;
}